#
# $Id: configure.in,v 1.1 2002/09/09 20:10:15 hop Exp $
#
AC_INIT(dvb.c)
AC_CONFIG_HEADER(config.h)

PIKE_FEATURE_WITHOUT(DVB)

AC_ARG_WITH(dvb,     [  --with(out)-dvb       Support DVB],[],[with_dvb=yes])
AC_ARG_WITH(dvb-include-dir,
    [  --with-dvb-include-dir        DVB headers directory root location],
        [pike_dvb_include_dir=$withval])

AC_MODULE_INIT()
if test x$with_dvb = xyes ; then
  PIKE_FEATURE_NODEP(DVB)

  AC_MSG_CHECKING(for DVB include files location)
  if test x$pike_dvb_include_dir != x; then
    AC_MSG_RESULT(user-provided: $pike_dvb_include_dir)
  else
    AC_MSG_RESULT(include dir wasn't specified.)
  fi

  if test x$pike_dvb_include_dir != x; then
    CPPFLAGS="-I$pike_dvb_include_dir $CPPFLAGS"
  fi

  dnl Checking for version 2+ API
  AC_CHECK_HEADERS(linux/dvb/version.h,
      [ PIKE_FEATURE(DVB,[yes]) ])
	  
  AC_CHECK_HEADERS(ost/frontend.h,
      [ PIKE_FEATURE(DVB,[yes]) ])


fi

AC_OUTPUT(Makefile,echo FOO >stamp-h )
