#
# $Id: configure.in,v 1.4 2004/11/10 16:17:29 grubba Exp $
#
AC_INIT(dvb.c)
AC_CONFIG_HEADER(config.h)

PIKE_FEATURE_WITHOUT(DVB)

AC_ARG_WITH(dvb,     [  --with(out)-dvb       Support DVB],[],[with_dvb=yes])
AC_ARG_WITH(dvb-include-dir,
    [  --with-dvb-include-dir        DVB headers directory root location],
        [pike_dvb_include_dir=$withval])

AC_MODULE_INIT()
if test x$with_dvb = xyes ; then
  PIKE_FEATURE_NODEP(DVB)

  AC_MSG_CHECKING(for DVB include files location)
  if test x$pike_dvb_include_dir != x; then
    AC_MSG_RESULT(user-provided: $pike_dvb_include_dir)
  else
    AC_MSG_RESULT(include dir was not specified.)
  fi

  if test x$pike_dvb_include_dir != x; then
    CPPFLAGS="-I$pike_dvb_include_dir $CPPFLAGS"
  fi

dnl linux 2.6 has dvb/version.h but not linux/dvb/sec.h,
dnl which dvb.c needs; this should probably be updated
dnl some better way: FIXME!!1!¡ /Mirar
dnl Nesting check_headers does not work with autoconf 2.59. /grubba

dnl Checking for DVB API
  AC_CHECK_HEADERS(linux/dvb/version.h linux/dvb/sec.h ost/frontend.h)

  if test "$ac_cv_header_linux_dvb_version_h" = "yes"; then
    if test "$ac_cv_header_lunix_dvb_sec_h" = "yes"; then
      PIKE_FEATURE(DVB,[yes (version 2 api)])
    else
      PIKE_FEATURE(DVB,[no (missing linux/dvb/sec.h - version 3 api?)])
    fi
  elif test "$ac_cv_header_ost_frontend.h" = "yes"; then
    PIKE_FEATURE(DVB,[yes (version 1 api)])
  else
    PIKE_FEATURE(DVB,[no (headers not found)])
  fi
fi

AC_OUTPUT(Makefile,echo FOO >stamp-h )
