# $Id: configure.in,v 1.3 1998/09/20 08:30:50 hubbe Exp $
AC_INIT(gdbmmod.c)
AC_CONFIG_HEADER(gdbm_machine.h)

AC_ARG_WITH(gdbm,    [  --with(out)-gdbm       GNU database manager support ],[],[with_gdbm=yes])

AC_MODULE_INIT()

if test x$with_gdbm = xyes; then
  AC_CHECK_HEADERS(gdbm.h)
  AC_CHECK_LIB(gdbm, gdbm_open)
fi

AC_OUTPUT(Makefile,echo FOO >stamp-h )


