# $Id: configure.in,v 1.6 2008/07/18 17:28:52 mast Exp $
AC_INIT(gdbmmod.c)
AC_CONFIG_HEADER(gdbm_machine.h)

AC_ARG_WITH(gdbm,    [  --with(out)-gdbm       GNU database manager support ],[],[with_gdbm=yes])

AC_MODULE_INIT()

PIKE_FEATURE_WITHOUT(Gdbm)

if test x$with_gdbm = xyes; then
  PIKE_FEATURE_NODEP(Gdbm)

  AC_CHECK_HEADERS(gdbm.h)
  AC_SEARCH_LIBS(gdbm_open, gdbm libgdbm, [
    if test x$ac_cv_header_gdbm_h = xyes; then
      AC_DEFINE(HAVE_LIBGDBM, [], [Defined if the gdbm library is found.])
      PIKE_FEATURE_OK(Gdbm)
    fi
  ])
fi

AC_OUTPUT(Makefile,echo FOO >stamp-h )


