# $Id: configure.in,v 1.7 2006/07/04 20:45:27 mast Exp $
AC_INIT(gettext.c)
AC_CONFIG_HEADER(config.h)

AC_MODULE_INIT()

AC_HAVE_HEADERS(locale.h libintl.h iconv.h)

########################################################################
#   gettext checking (localization)
########################################################################

AC_CHECK_LIB(iconv, libiconv)
AC_CHECK_LIB(intl, gettext)
AC_CHECK_FUNCS(setlocale gettext iconv)

AC_ARG_WITH(nlsdir, 
	[  --with-nlsdir=PATH      specify where the locale stuff should go ])


if test "x$NLSDIR" = "x"; then
	if test "x$with_nlsdir" != "x"; then
		NLSDIR=$with_nlsdir
	else
		NLSDIR='$(prefix)/share/locale'
	fi
fi
AC_SUBST(NLSDIR)

AC_OUTPUT(Makefile,echo FOO >stamp-h )
